Implemented a Include Table Selection Column. Constructor and Methods actionPerformed(), & mouseClicked() Effected. Added Action of Include All Tables and Exclude All Tables in Popup Menu. Disabled searchButton Till clearSearchTextFieldButton After Search. Added Argument selectedTables to SearchDatabaseThread instantiation.